Initial commit for TFA Audio Driver in CAF branch

--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,9 @@
 *.lst
 *.symtypes
 *.order
+modules.builtin
 *.elf
 *.bin
-*.tar
 *.gz
 *.bz2
 *.lzma
@@ -33,12 +33,7 @@
 *.lzo
 *.patch
 *.gcno
-*.ll
-modules.builtin
-Module.symvers
-*.dwo
-*.su
-*.c.[012]*.*
+*.dll
 
 #
 # Top-level generic files
@@ -47,11 +42,10 @@ Module.symvers
 /TAGS
 /linux
 /vmlinux
-/vmlinux.32
-/vmlinux-gdb.py
 /vmlinuz
 /System.map
 /Module.markers
+Module.symvers
 
 #
 # Debian directory (make deb-pkg)
@@ -59,16 +53,10 @@ Module.symvers
 /debian/
 
 #
-# tar directory (make tar*-pkg)
-#
-/tar-install/
-
-#
-# git files that we don't want to ignore even if they are dot-files
+# git files that we don't want to ignore even it they are dot-files
 #
 !.gitignore
 !.mailmap
-!.cocciconfig
 
 #
 # Generated include files
@@ -94,9 +82,6 @@ GRTAGS
 GSYMS
 GTAGS
 
-# id-utils files
-ID
-
 *.orig
 *~
 \#*#
@@ -105,7 +90,6 @@ ID
 # Leavings from module signing
 #
 extra_certificates
-signing_key.pem
 signing_key.priv
 signing_key.x509
 x509.genkey
@@ -113,11 +97,3 @@ x509.genkey
 # Kconfig presets
 all.config
 
-# Kdevelop4
-*.kdev4
-
-# fetched Android config fragments
-kernel/configs/android-*.cfg
-
-*.sh
-/out
